--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/global.css';
+
 ---
 
 <nav class="w-full fixed top-0 bg-gradient-to-r from-background/80 to-specialbg/80 backdrop-blur-md shadow-md z-30">
@@ -40,7 +40,7 @@ import '../styles/global.css';
     </div>
     <ul class="text-right space-y-6 mr-2">
         <li><a href="/portfolio" class="link">Portfolio</a></li>
-        <li><a href="/portfolio" class="link">Pricing</a></li>
+        <li><a href="/pricing" class="link">Pricing</a></li>
         <li><a href="/floral-arrangements" class="link">Floral Arrangements</a></li>
         <li><a href="/about" class="link">About Me</a></li>
         <li><a href="/booking" class="link button">Book Your Session</a></li>
