--- a/src/components/InstaPost.astro
+++ b/src/components/InstaPost.astro
@@ -1,12 +1,11 @@
 ---
-import Container from '../layouts/Container.astro'
-import '../styles/global.css'
+
 ---
 
 <div class="flex flex-col items-center justify-center gap-4">
     <h1 class="text-2xl md:text-3xl font-bold text-heading">Follow us on Instagram!</h1>
     <a href="https://www.instagram.com/pualani_creative/"><p class="italic link">@pualani_creative</p></a>
-    <div id="instagram-feed" class="grid grid-cols-[repeat(auto-fill,_minmax(20rem,1fr))] gap-4 border-t border-border pt-4"></div>
+    <div id="instagram-feed" class="grid grid-cols-2 md:grid-cols-3 gap-4 border-t border-border pt-4"></div>
 </div>
 
 <script>
